@@ -22,4 +22,7 @@ PHP                                                                        NEWS
 - XMLWriter:
   . Improved performance and reduce memory consumption. (nielsdos)
 
+- XSL:
+  . Implement request #30622 (make $namespace parameter functional). (nielsdos)
+
 <<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>
